@@ -1,0 +1,5 @@
+3
+baz/A
+bar/B
+beer/C
+eer/C
